--- a/style.css
+++ b/style.css
@@ -391,12 +391,12 @@ section .title::after{
 
 /* projects section styling */
 .projects .title::after{
-    content: "who with me";
+    content: "works by me";
 }
 .projects .carousel .card{
     background: #222;
     border-radius: 6px;
-    padding: 25px 35px;
+    padding: 25px 30px;
     text-align: center;
     overflow: hidden;
     transition: all 0.3s ease;
@@ -420,10 +420,10 @@ section .title::after{
     margin: 10px 0 7px 0;
 }
 .projects .carousel .card img{
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 0%;
     border: 5px solid crimson;
     transition: all 0.3s ease;
 }
