--- a/style.css
+++ b/style.css
@@ -430,6 +430,34 @@ section .title::after{
 .projects .carousel .card:hover img{
     border-color: #fff;
 }
+.projects .carousel .card .box .tech img{
+    height: 50px;
+    width: 100px;
+    object-fit:contain;
+    border-radius: 0%;
+    border: 0px solid crimson;
+    transition: all 0.3s ease;
+    margin-bottom: 10px;
+}
+.projects .carousel .card:hover .box .tech img{
+    border-color: #fff;
+}
+.projects .carousel .card .box a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.projects .carousel .card .box a:hover{
+    color: rgb(20, 33, 220);
+    background: lightcoral;
+}
 .owl-dots{
     text-align: center;
     margin-top: 20px;
